# ion

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-vcpkg-ninja.yml  linux-build.yml  windows-build.yml
assets/: bloom_blur_shader.frag  bloom_blur_shader.manifest  bloom_combine_shader.frag  bloom_combine_shader.manifest  bloom_combine_shader.vert  bloom_shader.manifest  default_quad  default_texture.manifest  deferred_shader.frag  deferred_shader.manifest  deferred_shader.vert  screen.frag  screen.vert  screen_quad  screen_shader.manifest  screen_shader.vert  sprite.frag  sprite.vert  sprite_shader.manifest  test_texture.manifest  texture_shader.frag  texture_shader.manifest  texture_shader.vert  tonemap_shader.frag  tonemap_shader.manifest  vignette.xcf
assets/bloom_shader/: fs.glsl
assets/deferred_shader/: fs.glsl
assets/screen_shader/: fs.glsl
assets/test_sprite/: color.manifest  normal.manifest  test.aseprite
include/: assets.h  camera.h  component.h  context.h  defaults.h  ecs.h  error_code.h  exports.h  gpu_data.h  physics.h  render.h  script.h  shader.h  sprites.h  texture.h  transform.h  world.h  world_inspector.h
include/development/: gui.h  id.h  package.h  uuid.h  write_to_disk.h
include/game/: game.h  player.h
include/ion/: assets.h  base_pipeline.h  component.h  context.h  defaults.h  error_code.h  exports.h  gpu_data.h  physics.h  render.h  save_keys.h  script.h  shader.h  systems.h  texture.h  world.h
include/ion/development/: gui.h  inspector.h  package.h  startwindow.h  write_to_disk.h
include/ion/game/: game.h
include/ion/render/: api.h
src/: assets.cc  context.cc  main.cc  physics.cc  render.cc  script.cc  shader.cc  sprites.cc  texture.cc  transform.cc  world.cc  world_inspector.cc
src/base/: assets.cc  base_pipeline.cc  context.cc  defaults.cc  main.cc  physics.cc  render.cc  script.cc  shader.cc  systems.cc  texture.cc  world.cc
src/base/render/: api.cc  command.cc  debug.cc  devices.cc  framebuffers.cc  image_views.cc  instance.cc  pipeline.cc  render_pass.cc  surface.cc  swapchain.cc
src/development/: gui.cc  inspector.cc  main.cc  package.cc  startwindow.cc  write_to_disk.cc
src/game/: game.cc  player.cc
src/run/: main.cc  runner.cc
